# nbfoundry

./: .envrc.prev  .gitignore  .gitignore.prev  .project-guide.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  pyve.toml  requirements-dev.txt
.github/workflows/: ci.yml  publish.yml
.pyve/: config
docs/project-guide/: go.md
docs/specs/: concept.md  env-dependencies.md  exercise-notebook-source-spec.md  features.md  learningfoundry-dependency-spec.md  learningfoundry-embedded-learning-exercise-vs-native-applied-exercise.md  phase-f-pypi-distribution-and-stack-refresh-plan.md  phase-i-learningfoundry-integration-refactoring-plan.md  project-essentials.md  stories.md  tech-spec.md
docs/specs/.archive/: phase-f-pyve-micromamba-testenv-trap.md  phase-f-pyve-named-testenvs.md  stories-v0.45.0.md
docs/specs/datarefinery/: README.md  concept.md  features.md  tech-spec.md
docs/specs/learningfoundry/: README.md  applied-exercise-requirements.md  concept.md  consumer-dependency-spec.md  dependency-spec.md  features.md  nbfoundry-exercise-guidelines-for-authors.md  tech-spec.md
docs/specs/modelfoundry/: README.md  concept.md  dependency-spec.md  features.md  tech-spec.md
scripts/: keras_metal_fit_repro.py  keras_metal_narrow.py  metal_smoke.py  spike_codegen.py  spike_compile_exercise.py
scripts/spike_fixtures/: minimal.yaml
src/nbfoundry/: __init__.py  _modelfoundry.py  _version.py  assets.py  cli.py  codegen.py  compiler.py  config.py  errors.py  logging_setup.py  markdown.py  notebooks.py  paths.py  schema.py  standalone.py
src/nbfoundry/templates/: environment.yml  requirements-base.txt  requirements-tf.txt  requirements-torch.txt
src/nbfoundry/templates/data_exploration/: notebook.py
src/nbfoundry/templates/data_preparation/: notebook.py
src/nbfoundry/templates/model_evaluation/: notebook.py
src/nbfoundry/templates/model_experimentation/: notebook.py
src/nbfoundry/templates/model_optimization/: environment.yml  notebook.py
src/nbfoundry/templates/standalone/: launch.py
tests/: conftest.py
tests/fixtures/exercises/: invalid_duplicate_field_name.yaml  invalid_empty_sections.yaml  invalid_image_missing_alt.yaml  invalid_missing_asset.yaml  invalid_missing_title.yaml  invalid_pass_threshold_out_of_range.yaml  invalid_path_escape.yaml  invalid_range_on_text_field.yaml  invalid_section_code_xor.yaml  invalid_top_level_not_mapping.yaml  invalid_unknown_key.yaml  invalid_yaml_syntax.yaml  valid_graded.yaml  valid_minimal.yaml  valid_with_assets.yaml
tests/fixtures/exercises/tree/: exercise.yaml
tests/fixtures/exercises/tree/notebooks/: step1.py  step2.py
tests/fixtures/exercises/tree/sections/: load.py  summarize.py
tests/fixtures/golden/: valid_graded.json
tests/integration/: __init__.py  test_aggregate_tree.py  test_cli_compile.py  test_cli_compile_exercise.py  test_cli_init.py  test_cli_init_requirements.py  test_cli_validate.py  test_determinism.py  test_e2e_huggingface.py  test_e2e_keras.py  test_e2e_optuna.py  test_e2e_pytorch.py  test_e2e_template_data_exploration.py  test_e2e_template_data_preparation.py  test_e2e_template_model_evaluation.py  test_e2e_tensorflow.py  test_marimo_loads_generated.py  test_no_network.py  test_schema_fidelity.py
tests/integration/env/: tensorflow.txt  torch.txt
tests/unit/: test_assets.py  test_build_time_purity.py  test_codegen.py  test_codegen_option_c.py  test_compiler.py  test_compiler_option_c.py  test_config.py  test_errors.py  test_fixtures_corpus.py  test_markdown.py  test_metal_smoke.py  test_modelfoundry_adapter.py  test_notebooks.py  test_paths.py  test_public_api.py  test_schema.py  test_schema_option_c.py  test_smoke_env_requirements.py  test_standalone_requirements.py  test_validator.py
