# Copyright (c) 2026 Pointmatic
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nbfoundry"
description = "Marimo-based notebook framework for ML/DS work — standalone tools and embeddable learningfoundry exercises from one source"
readme = "README.md"
requires-python = ">=3.12.13,<3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Pointmatic" },
]
keywords = ["marimo", "notebook", "machine-learning", "data-science", "curriculum", "learningfoundry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "marimo",
    "typer",
    "pyyaml",
    "markdown-it-py",
    "pydantic>=2",
]
dynamic = ["version"]

[project.scripts]
nbfoundry = "nbfoundry.cli:main"

[project.urls]
Homepage = "https://github.com/pointmatic/nbfoundry"
Repository = "https://github.com/pointmatic/nbfoundry"
Issues = "https://github.com/pointmatic/nbfoundry/issues"
Changelog = "https://github.com/pointmatic/nbfoundry/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/nbfoundry/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nbfoundry"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["src/nbfoundry/templates", "tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["nbfoundry"]
# The author notebook templates import the ML stack only as example code and are
# full of intentional unannotated marimo cells — they are not part of nbfoundry's
# typed surface (FR-7) and are covered by the F.h–F.j template smokes, not strict
# typing. Excluded here (mirrors [tool.ruff] extend-exclude) so the typecheck env
# stays ML-free and light. See env-dependencies.md §5.1 "mypy scope".
exclude = '^src/nbfoundry/templates/'

# modelfoundry is an optional, not-yet-published internal dependency reached only
# through the thin `_modelfoundry.get_adapter()` adapter (raises a clear error
# when absent). It ships no type stubs and is not installed, so tell mypy not to
# error on the missing import; the adapter's own return is already `# type: ignore`d.
[[tool.mypy.overrides]]
module = "modelfoundry"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -m 'not hardware' --cov=nbfoundry --cov-report=term-missing --cov-report=xml --cov-fail-under=85"
markers = [
    "slow: tests that take more than a few seconds",
    "hardware: tests that require Apple Silicon Metal/MPS hardware (opt-in via -m hardware)",
]

[tool.coverage.run]
# Coverage gate (TR-6) measures nbfoundry's public modules only. The author
# notebook templates and the embedded standalone launcher are generated/runtime
# example files (ML code, never imported by the package surface) and are excluded
# here, mirroring the ruff/mypy template excludes.
omit = [
    "*/nbfoundry/templates/*",
    "src/nbfoundry/templates/*",
]
